Fix header spacing

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -925,7 +925,7 @@ div.post {
     margin: 1.5em 0 .5em; }
   div.post h2 {
     font-size: 28px;
-    margin-bottom: .8em; }
+    line-height: 1.3em; }
   div.post h3 {
     font-size: 20px; }
   div.post h4 {
