--- a/assets/sass/post.scss
+++ b/assets/sass/post.scss
@@ -64,7 +64,7 @@ div.post {
 
     h2 {
         font-size: 28px;
-        margin-bottom: .8em;
+        line-height: 1.3em;
     }
 
     h3 {
